[package]
name = "vllm-orchestrator-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
futures = "0.3.30"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "native-tls", "stream"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
tokio = { version = "1.41.1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
native-tls = "0.2.12"
openssl = "0.10.73"

[[bin]]
name = "vllm-orchestrator-gateway"
path = "src/main.rs"
